2009-08-10  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-callbacks.c:  Rework 'Open With' menu layout
	to match changes made to nautilus.  Mark 'Open with' 
	strings for translation.
	
2009-05-18  Dennis Cranston  <dennis_cranston@yahoo.com>

	* configure.ac, Makefile.am, *.[ch]: Added libeggsmclient 
	& libgnomeui-deprecated.  Remove the use of libgnomui from
	gnome-search-tool. This reduces the number of shared libraries 
	required by gnome-search-tool from 75 to 52. Bug 573670.
	
2009-05-17  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-callbacks.c,
	* gsearchtool-support.c, 
	* gsearchtool.c:  Fix build when using MAINTAINER_CFLAGS.
	
2009-05-17  Dennis Cranston  <dennis_cranston@yahoo.com>

	* configure.ac, Makefile.am: Use gio-unix.
	* gsearchtool-callbacks.c: Remove gnome-desktop-item.h
	* gsearchtool-support.c (open_file_with_filemanager):  
	Replace GnomeDesktopItem with GDesktopAppInfo, Bug 582785.
	
2009-04-29  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-callbacks.c (build_popup_menu_for_file):  
	Clean up the code.
	
2009-04-28  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-callbacks.c (build_popup_menu_for_file):  
	See bug 546916 -- Sync open menu with recent nautilus changes.
	
2009-04-27  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-support.c (compare_regex):  Minor logic fix.
	
	NOTE: Git is a usability nightmare.  I fear the number
	of GNOME volunteers will decrease as a result of this version
	control change, but I hope I am wrong.
	
2009-04-26  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-support.c (compare_regex):  Fix memory leak.
	Bug 579461.

2009-03-29  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool.c (setup_case_insensitive_arguments): If grep
	supports the -I argument then use it. Bug 568840.

2009-03-24  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-support.c (get_file_pixbuf): Use a better key