@@ -1,3 +1,8 @@
+2009-08-26  Dennis Cranston  <dennis_cranston@yahoo.com>
+
+	* gsearchtool-callbacks.c:  Always show application icons
+	for open with items.
+
 2009-08-10  Dennis Cranston  <dennis_cranston@yahoo.com>
 
 	* gsearchtool-callbacks.c:  Rework 'Open With' menu layout
